# OS

./: README.md
CP/client/: client.cpp
CP/server/: server.cpp
lab1-2/: CMakeLists.txt  a.cpp
lab3/: CMakeLists.txt  main.cpp
lab4/: CMakeLists.txt  a.cpp
lab5/: CMakeLists.txt  calculator.cpp  calculator_shared.cpp  main.cpp  maindyn.cpp
